--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,23 @@
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	color: rgba(0, 0, 0, 0.87);
+	background-color:rgb(119, 189, 216);
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 2rem;
+	text-align: center;
 }
 
 a {
 	font-weight: 500;
-	color: #646cff;
+	color: #000dff;
 	text-decoration: inherit;
 }
 a:hover {
@@ -44,7 +48,7 @@ button {
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	background-color: #1a1a1a;
+	background-color: #c42323;
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
@@ -93,9 +97,10 @@ button:focus-visible {
 		background-color: #ffffff;
 	}
 	a:hover {
-		color: #747bff;
+		color: #0914e2;
 	}
 	button {
-		background-color: #f9f9f9;
+		background-color: #ffffff;
 	}
 }
+
